@@ -1,4 +1,5 @@
 0.03
+ - Add edition number use case.
  - Regen example with output.
  - Warning could be in utf8.
 
